style.css
/* 
Theme Name: Crommo Theme
Author: Mike de Geofroy
Description: The Theme of the crommo web page.
Version: 1.0
Text Domain: crommo
*/

@charset "UTF-8";
/* CSS Document */

html,body {
    padding: 0;
    margin: 0;
    font-family: 'Roboto';
}


.headercontainer {
    position: fixed;
    background-color: white;
    z-index: 9999;
}

#header {
    height: 10vh;
    min-height: 60px;
    top: 0;
    width: 100vw;
}

#header a:not(#logo) {
    display: inline-block;
    text-decoration: none;
    color: black;
    font-weight: 300;
    margin-left: 50px;
}

#logo img {
    height: 5vh;
    float: right;
    margin-right: 100px;
}

#marquee {
    background-color: #7df487;
    height: 4vh;
    width: 100vw;
    font-weight: 300;
    overflow: hidden;
    min-height: 25px;
    overflow: hidden;
    white-space: nowrap;
}

#marquee p {
    white-space: nowrap;
}

@media(max-width: 800px) {
    #header a:not(#logo) {
        display: none;
    }

    #logo img {
        margin-right: 25px;
    }
}

.postcontainer {
    width: 90vw;
    z-index: 1;
    padding-top: 14vh;
    margin-right: auto;
    margin-left: auto;
    min-height: 100%;
    height: fit-content;
    display: grid;
    grid-gap: 30px;
    grid-row-gap: 0px;
    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
}

.shopimg img {
    width: 100%;
}

.overlay {
    z-index: 4;
}

.shopimg {
    border: 3px solid rgba(229, 225, 236, 1.00);
    border-top: 30px solid rgba(229, 225, 236, 1.00);
    border-radius: 5px;
    box-shadow: 0px 0px 30px rgba(42, 44, 42, 0.25);
    -moz-box-shadow: 0px 0px 30px rgba(42, 44, 42, 0.25);
    -webkit-box-shadow: 0px 0px 30px rgba(42, 44, 42, 0.25);
    -khtml-box-shadow: 0px 0px 30px rgba(42, 44, 42, 0.25);
    overflow: hidden;
    position: relative;
}

.post {
    margin-top: 8px;
    vertical-align: middle;
    position: relative;
}

.post p {
    top: 24px;
    font-family: 'Roboto';
    z-index: 2;
    margin: 0;
    font-size: 13px;
    color: #4a6c78;
    text-align: center;
    position: relative;
}

.buttons img {
    height: 12px;
    top: 40px;
    position: relative;
    z-index: 3;
}

.button2 {
    cursor: default;
}

.button3 a {
    position: relative;
    text-decoration: none;
    color: rgba(255, 255, 255, 0);
    font-size: 20px;
    font-weight: 900;
    padding: 8px;
    border: 3px solid rgba(255, 255, 255, 0);
}

.button3 {
    width: 20%;
}

.buttons {
    margin-left: 10px;
}

.homepageslider {
    width: 75vw;
    z-index: 1;
    padding-top: 18vh;
    margin-right: auto;
    margin-left: auto;
}

.slidepost {
    width: 100%;
    height: auto;
}

.slidepost img {
    width: 49%;
}

.post h1 {
    width: 50%;
}

.footer {
    bottom: 0px;
    height: 15vh;
}

.footer img {
    height: 4vh;
    margin-left: 4vh;
    margin-top: 4.5vh;
}

b {
    font-weight: 900;
}

h1 {
    line-height: 0.7em;
}

.follow {
    font-weight: 300;
    text-align: center;
}

.follow a {
    text-decoration: none !important;
}

.info a {
    float: right;
    font-family: 'Roboto';
    font-weight: 300;
    font-size: small;
}

a{
    text-decoration: none;
    color: black;
}

.info {
    float: right;
    margin: 4vh;
    width: 50vw;
}

.instagramcontainer {
    position: relative;
}

h2 {
    font-family: 'Roboto';
    font-weight: 300;
    margin-block-start: 0.40em;
    margin-block-end: 0.40em;
}

.description a div{
    font-weight: 300;
}

